# irreducible_polynomials

./: .gitignore  CMakeLists.txt  README.md
inc/: main_window.h  mainwindow.h  polynomial_generator.h  wrapper.h
inc/ui/: button.h  label.h  main_window.h  number_input.h  progress_bar.h  styles.h
src/: CMakeLists.txt  main.cpp  main_window.cpp  mainwindow.cpp  polynomial_generator.cpp  wrapper.cpp
src/ui/: button.cpp  label.cpp  main_window.cpp  number_input.cpp  progress_bar.cpp  wrapper.cpp
